[gd_scene load_steps=3 format=3 uid="uid://c8kqfxw5gvwqj"]

[ext_resource type="Script" path="res://scripts/ui/components/popup.gd" id="1_popup"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_popup")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "弹出窗口标题"
horizontal_alignment = 1

[node name="ContentLabel" type="Label" parent="Panel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
text = "弹出窗口内容"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="OptionsContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 10
alignment = 1

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"
